Updates path of saved svm model

--- a/image_classification_model/svm_image_classifier.ipynb
+++ b/image_classification_model/svm_image_classifier.ipynb
@@ -725,7 +725,7 @@
     }
    ],
    "source": [
-    "joblib.dump(model, \"../svm_face_classifier.pkl\")"
+    "joblib.dump(model, \"../streamlit/models/svm_face_classifier.pkl\")"
    ]
   },
   {
