Saves the label encoder in a joblib format

--- a/image_classification_model/svm_image_classifier.ipynb
+++ b/image_classification_model/svm_image_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "c66e1131-3019-4a05-b0cb-82b6cd4885e8",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "b7e38ba5-a432-4a35-9dcd-c90bf62ddafb",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "ff12dc91-11cb-4b63-9df7-367b8a6ff2f5",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "cbc00c99-9937-4981-b1b2-f4f2bb9b3633",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "(174, 25088)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "8096ac7c-2292-4fe5-9096-33afa1fcf5c3",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "       'train', 'train', 'train', 'train', 'train', 'train'], dtype='<U5')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,13 +118,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "cee5d4ec-dbea-4c32-99fe-405bccd4ca71",
    "metadata": {},
    "outputs": [],
    "source": [
     "le = LabelEncoder()\n",
     "labels = le.fit_transform(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d1fb0142-f100-4bd0-b413-ef6d6ab8d5b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../streamlit/models/encoder.joblib']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save the encoder in a joblib file\n",
+    "joblib.dump(le, '../streamlit/models/encoder.joblib')"
    ]
   },
   {
@@ -137,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "72395c02-9822-474a-a5e8-c186e4d35796",
    "metadata": {},
    "outputs": [],
@@ -155,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "156a9c6a-9aae-41ab-965e-27c6ce160f66",
    "metadata": {},
    "outputs": [
@@ -572,7 +594,7 @@
        "SVC(kernel='linear', probability=True)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "0f119a81-fe62-4e2d-a824-482006ef0627",
    "metadata": {},
    "outputs": [],
@@ -603,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "6b08ab0f-a452-4901-9cfc-8a576a45253b",
    "metadata": {},
    "outputs": [
@@ -614,7 +636,7 @@
        "       1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "49363843-7718-4084-b300-544fa4a59127",
    "metadata": {},
    "outputs": [],
@@ -635,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "b2f7015a-1b5c-4d55-ba6d-e7b0614bbd9c",
    "metadata": {},
    "outputs": [
@@ -645,7 +667,7 @@
        "0.7714285714285715"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "0163dee8-59c7-4006-b794-88e83377b8ed",
    "metadata": {},
    "outputs": [
@@ -682,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "70c89f67-6172-4f2a-98ff-c416ba9a2ea0",
    "metadata": {},
    "outputs": [
@@ -709,23 +731,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "3fb7c314-8993-4935-81c8-0b21b282b6bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../svm_face_classifier.pkl']"
+       "['../streamlit/models/svm_face_classifier.joblib']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(model, \"../streamlit/models/svm_face_classifier.pkl\")"
+    "joblib.dump(model, \"../streamlit/models/svm_face_classifier.joblib\")"
    ]
   },
   {
