--- a/image_classification_model/svm_image_classifier.ipynb
+++ b/image_classification_model/svm_image_classifier.ipynb
@@ -52,7 +52,7 @@
     {
      "data": {
       "text/plain": [
-       "(174, 25088)"
+       "(130, 25088)"
       ]
      },
      "execution_count": 4,
@@ -73,30 +73,40 @@
     {
      "data": {
       "text/plain": [
-       "array(['test', 'test', 'test', 'test', 'test', 'test', 'test', 'test',\n",
-       "       'test', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'test', 'test', 'test', 'test', 'test',\n",
-       "       'test', 'test', 'test', 'test', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'test', 'test', 'test', 'test', 'test', 'test', 'test', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'test', 'test', 'test', 'test', 'test', 'test',\n",
-       "       'test', 'test', 'test', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'test', 'test', 'test', 'test', 'test', 'test',\n",
-       "       'test', 'test', 'test', 'test', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train', 'train',\n",
-       "       'train', 'train', 'train', 'train', 'train', 'train'], dtype='<U5')"
+       "array(['steven_gerrard', 'steven_gerrard', 'steven_gerrard',\n",
+       "       'steven_gerrard', 'steven_gerrard', 'steven_gerrard',\n",
+       "       'steven_gerrard', 'steven_gerrard', 'steven_gerrard',\n",
+       "       'steven_gerrard', 'steven_gerrard', 'steven_gerrard',\n",
+       "       'steven_gerrard', 'steven_gerrard', 'steven_gerrard',\n",
+       "       'steven_gerrard', 'steven_gerrard', 'steven_gerrard',\n",
+       "       'steven_gerrard', 'steven_gerrard', 'steven_gerrard',\n",
+       "       'steven_gerrard', 'steven_gerrard', 'steven_gerrard',\n",
+       "       'steven_gerrard', 'steven_gerrard', 'steven_gerrard',\n",
+       "       'steven_gerrard', 'steven_gerrard', 'steven_gerrard', 'mo_salah',\n",
+       "       'mo_salah', 'mo_salah', 'mo_salah', 'mo_salah', 'mo_salah',\n",
+       "       'mo_salah', 'mo_salah', 'mo_salah', 'mo_salah', 'mo_salah',\n",
+       "       'mo_salah', 'mo_salah', 'mo_salah', 'mo_salah', 'mo_salah',\n",
+       "       'mo_salah', 'mo_salah', 'mo_salah', 'mo_salah', 'mo_salah',\n",
+       "       'mo_salah', 'mo_salah', 'mo_salah', 'mo_salah',\n",
+       "       'christiano_ronaldo', 'christiano_ronaldo', 'christiano_ronaldo',\n",
+       "       'christiano_ronaldo', 'christiano_ronaldo', 'christiano_ronaldo',\n",
+       "       'christiano_ronaldo', 'christiano_ronaldo', 'christiano_ronaldo',\n",
+       "       'christiano_ronaldo', 'christiano_ronaldo', 'christiano_ronaldo',\n",
+       "       'christiano_ronaldo', 'christiano_ronaldo', 'christiano_ronaldo',\n",
+       "       'christiano_ronaldo', 'christiano_ronaldo', 'christiano_ronaldo',\n",
+       "       'christiano_ronaldo', 'christiano_ronaldo', 'christiano_ronaldo',\n",
+       "       'christiano_ronaldo', 'christiano_ronaldo', 'christiano_ronaldo',\n",
+       "       'messi', 'messi', 'messi', 'messi', 'messi', 'messi', 'messi',\n",
+       "       'messi', 'messi', 'messi', 'messi', 'messi', 'messi', 'messi',\n",
+       "       'messi', 'messi', 'messi', 'messi', 'messi', 'messi', 'messi',\n",
+       "       'messi', 'messi', 'messi', 'messi', 'messi', 'messi',\n",
+       "       'wayne_rooney', 'wayne_rooney', 'wayne_rooney', 'wayne_rooney',\n",
+       "       'wayne_rooney', 'wayne_rooney', 'wayne_rooney', 'wayne_rooney',\n",
+       "       'wayne_rooney', 'wayne_rooney', 'wayne_rooney', 'wayne_rooney',\n",
+       "       'wayne_rooney', 'wayne_rooney', 'wayne_rooney', 'wayne_rooney',\n",
+       "       'wayne_rooney', 'wayne_rooney', 'wayne_rooney', 'wayne_rooney',\n",
+       "       'wayne_rooney', 'wayne_rooney', 'wayne_rooney', 'wayne_rooney'],\n",
+       "      dtype='<U18')"
       ]
      },
      "execution_count": 5,
@@ -136,7 +146,7 @@
     {
      "data": {
       "text/plain": [
-       "['../streamlit/models/encoder.joblib']"
+       "['../models/encoder.joblib']"
       ]
      },
      "execution_count": 7,
@@ -146,7 +156,7 @@
    ],
    "source": [
     "# Save the encoder in a joblib file\n",
-    "joblib.dump(le, '../streamlit/models/encoder.joblib')"
+    "joblib.dump(le, '../models/encoder.joblib')"
    ]
   },
   {
@@ -632,8 +642,8 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0,\n",
-       "       1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "array([0, 2, 3, 2, 3, 0, 0, 1, 1, 4, 1, 3, 0, 4, 1, 1, 0, 1, 1, 1, 4, 3,\n",
+       "       4, 3, 4, 2])"
       ]
      },
      "execution_count": 11,
@@ -664,7 +674,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7714285714285715"
+       "0.8076923076923077"
       ]
      },
      "execution_count": 13,
@@ -686,14 +696,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
+      "                    precision    recall  f1-score   support\n",
       "\n",
-      "        test       0.50      0.25      0.33         8\n",
-      "       train       0.81      0.93      0.86        27\n",
+      "christiano_ronaldo       0.80      1.00      0.89         4\n",
+      "             messi       1.00      1.00      1.00         8\n",
+      "          mo_salah       1.00      0.75      0.86         4\n",
+      "    steven_gerrard       0.80      0.57      0.67         7\n",
+      "      wayne_rooney       0.40      0.67      0.50         3\n",
       "\n",
-      "    accuracy                           0.77        35\n",
-      "   macro avg       0.65      0.59      0.60        35\n",
-      "weighted avg       0.74      0.77      0.74        35\n",
+      "          accuracy                           0.81        26\n",
+      "         macro avg       0.80      0.80      0.78        26\n",
+      "      weighted avg       0.85      0.81      0.81        26\n",
       "\n"
      ]
     }
@@ -712,13 +725,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2  6]\n",
-      " [ 2 25]]\n"
+      "[[4 0 0 0 0]\n",
+      " [0 8 0 0 0]\n",
+      " [1 0 3 0 0]\n",
+      " [0 0 0 4 3]\n",
+      " [0 0 0 1 2]]\n"
      ]
     }
    ],
    "source": [
     "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c5786ac-c2c4-4ca5-91f3-bc03482ab1a9",
+   "metadata": {},
+   "source": [
+    "From the evaluation, our model has an 80% accurracy which means it performs quite well. When looking at the classification report: Christiano ronaldo's, messi's and Mohammed Salah's image have a high f1-score which increases their likelihood of detection while Steven gerrard and Wayne Rooney's images have low f1-score which means their images might not get detected."
    ]
   },
   {
@@ -738,7 +762,7 @@
     {
      "data": {
       "text/plain": [
-       "['../streamlit/models/svm_face_classifier.joblib']"
+       "['../models/svm_face_classifier.joblib']"
       ]
      },
      "execution_count": 16,
@@ -747,7 +771,7 @@
     }
    ],
    "source": [
-    "joblib.dump(model, \"../streamlit/models/svm_face_classifier.joblib\")"
+    "joblib.dump(model, \"../models/svm_face_classifier.joblib\")"
    ]
   },
   {
